GetRedirectToLongURL in progress
